# amqp-manager

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: test.yaml
examples/: pubsub_tokio.rs
src/: lib.rs  ops.rs  prelude.rs  session.rs
tests/: tests.rs
