[package]
name = "amqp-manager"
version = "1.1.0"
authors = ["Adrian Benavides"]
edition = "2018"
description = "Lapin wrapper that encapsulates the use of channels and provides some helpful methods"
repository = "https://github.com/adrianbenavides/amqp-manager"
keywords = ["lapin", "amqp"]
license = "MIT"

[dependencies]
lapin = { version = "=1.7", default-features = false, features = ["rustls"] }

[dev-dependencies]
dotenv = "0.15"
futures = "0.3"
once_cell = "1"
rand = "0.8"
serde = "1"
serde_json = "1"
tokio = { version = "=1", features = ["rt-multi-thread", "macros", "time"] }
tokio-amqp = { version = "=1", default-features = false }
