[package]
name = "amqp-manager"
version = "1.3.0"
authors = ["Adrian Benavides"]
edition = "2018"
description = "Lapin wrapper that encapsulates the use of connections/channels and creation of amqp objects"
repository = "https://github.com/adrianbenavides/amqp-manager"
keywords = ["lapin", "amqp"]
license = "MIT"

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool-lapin/rt_tokio_1", "tokio-amqp"]
rt_async-std_1 = ["deadpool-lapin/rt_async-std_1", "async-amqp"]

[dependencies]
async-amqp = { version = "=1.2", optional = true }
deadpool-lapin = { version = "=0.9", default-features = false, features = ["rt_tokio_1"] }
lapin = { version = "=1.7", default-features = false, features = ["rustls"] }
thiserror = "=1.0"
tokio-amqp = { version = "=1.0", optional = true }

[dev-dependencies]
deadpool-lapin = "=0.9"
dotenv = "0.15"
futures = "0.3"
once_cell = "1"
rand = "0.8"
serde = "1"
serde_json = "1"
tokio = { version = "=1", features = ["rt-multi-thread", "macros", "time"] }
