[package]
name = "amqp-manager"
version = "1.3.1"
authors = ["Adrian Benavides"]
edition = "2021"
resolver = "2"
description = "Lapin wrapper that encapsulates the use of connections/channels and creation of amqp objects"
repository = "https://github.com/adrianbenavides/amqp-manager"
keywords = ["lapin", "amqp"]
license = "MIT"

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool-lapin/rt_tokio_1", "tokio-amqp"]
rt_async-std_1 = ["deadpool-lapin/rt_async-std_1", "async-amqp"]

[dependencies]
async-amqp = { version = "=1", optional = true }
deadpool-lapin = { version = "=0.9", default-features = false }
lapin = { version = "=1", default-features = false, features = ["rustls"] }
thiserror = "=1"
tokio-amqp = { version = "=1", optional = true }

[dev-dependencies]
deadpool-lapin = "=0.9"
dotenv = "=0.15"
futures = "=0.3"
once_cell = "=1"
rand = "=0.8"
serde = "=1"
serde_json = "=1"
tokio = { version = "=1", features = ["test-util", "macros", "rt-multi-thread"] }
